--- a/client/mobile/html/index.html
+++ b/client/mobile/html/index.html
@@ -11,10 +11,14 @@
     <section class="login">
 
     </section>
+    <section class="gamepad">
+        <canvas></canvas>
+    </section>
+    <script src="../js/gamepad.js"></script>
     <script>
         class App {
             constructor() {
-
+                let gamepad = new Gamepad();
             }
             _bindEvent() {
                 
