--- a/client/pc/src/index.html
+++ b/client/pc/src/index.html
@@ -24,17 +24,11 @@
             right: 0;
             top: 0;
             bottom: 0;
-            cursor: -webkit-grab;
+            /* cursor: -webkit-grab; */
         }
     </style>
 </head>
 <body>
     <div class="wrap"></div>
-    <script src=""></script>
-    <script>
-        class Game extends {
-
-        }
-    </script>
 </body>
 </html>
