--- a/client/mobile/html/index.html
+++ b/client/mobile/html/index.html
@@ -16,11 +16,11 @@
     <script src="../js/gamepad.js"></script>
     <script>
         const MSG_TYPES = {
-            playerDataSend: 'PLAYER_DATA_SEND',
-            hostJoin: 'HOST_JOIN',
-            hostLeave: 'HOST_LEAVE',
-            mobileJoin: 'MOBILE_JOIN',
-            mobileLeave: 'MOBILE_LEAVE',
+            playerData: 'PLAYER_DATA',
+            // hostJoin: 'HOST_JOIN',
+            // hostLeave: 'HOST_LEAVE',
+            playerJoin: 'PLAYER_JOIN',
+            // mobileLeave: 'MOBILE_LEAVE',
             connected: 'CONNECTED'
         }
         class App {
@@ -29,17 +29,26 @@
                 // 建立websocket连接
                 this.ws = new WebSocket(url);
                 this.ws.addEventListener('message',({data}) => {
-                    this.isConnected = true;
-                    const res = JSON.parse(data);
-                    this.onData(res);
+                    const msg = JSON.parse(data);
+                    if (msg.name === MSG_TYPES.connected) { 
+                        this.send({
+                            name: MSG_TYPES.playerJoin
+                        });
+                        this.isConnected = true;
+                        console.log(data);
+                    }
                 });
                 let gamepad = new Gamepad(document.querySelector('.gamepad'));
                 gamepad.onData(data => {
                     if(!this.isConnected) return;
-                    this.send({
-                        name: MSG_TYPES.playerDataSend,
-                        body: data
-                    });
+                    try {
+                        this.send({
+                            name: MSG_TYPES.playerData,
+                            body: data
+                        });
+                    } catch(err) {
+                        this.isConnected = false;
+                    }
                 })
             }
             send(msg) {
