--- a/client/pc/src/index.html
+++ b/client/pc/src/index.html
@@ -26,9 +26,15 @@
             bottom: 0;
             /* cursor: -webkit-grab; */
         }
+        .qrcode-wrap {
+            position: fixed;
+            right: 15px;
+            top: 15px;
+        }
     </style>
 </head>
 <body>
     <div class="wrap"></div>
+    <div class="qrcode-wrap"></div>
 </body>
 </html>
